<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/alarmMenu"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/menuAlarm"/>
    <item
        android:id="@+id/settingsMenu"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/menuSettings"/>
    <item
        android:id="@+id/medsMenu"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/menuMeds"/>
    <item
        android:id="@+id/remindersMenu"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/menuReminders"/>
    <item
        android:id="@+id/smartMenu"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/menuSmart"/>

</menu>